platform/include/neutron/platform/thread.h

/**
 * SECTION: thread
 * @title: Thread
 * @short_description: A thread API
 */

/**
 * NtThread:
 * @instance: The %NtTypeInstance associated with this
 * @priv: Private data
 *
 * An %NtTypeInstance used for creating threads
 */
typedef struct _NtThread {
  NtTypeInstance instance;

  /*< private >*/
  struct _NtThreadPrivate* priv;
} NtThread;
/**
 * NtThreadMethod:
 * @thread: The thread calling the method
 * @data: The user data
 *
 * Returns: Anything the method wants to return
 */
typedef void* (*NtThreadMethod)(NtThread* thread, const void* data);
/**
 * NtThreadClosure:
 * @method: The method
 * @data: The user data
 *
 * A structure representing closure info on an attached method
 */
typedef struct _NtThreadClosure {
  NtThreadMethod method;
  const void* data;
} NtThreadClosure;
/**
 * nt_thread_detach_method:
 * @self: The thread
 * @id: The ID of the method
 *
 * Detaches a method by its ID from executing on the thread.
 *
 * Returns: The user data passed
 */
void* nt_thread_detach_method(NtThread* self, int id);
/**
 * nt_thread_set_main:
 * @self: The thread
 * @method: The method
 * @data: The data to pass to the method
 *
 * Sets the thread's main method which executes after the attached methods.
 * If the thread already has a main, then the old main is returned as a closure.
 *
 * Returns: The closure info on the old main and its data.
 */
NtThreadClosure nt_thread_set_main(NtThread* self, NtThreadMethod method, const void* data);