platform/include/neutron/platform/process.h

/**
 * SECTION: process
 * @title: Process
 * @short_description: A process or thread
 */
NT_BEGIN_DECLS

/**
 * NtProcess:
 * @instance: The %NtTypeInstance associated with this
 * @is_current: Method for determining whether or not the process is the current one
 * @get_id: Retrieve the process ID of this instance of %NtProcess, returns 0 if none exists
 * @send_signal: Method for triggering a signal
 * @priv: Private data
 *
 * A process or a thread
 */
typedef struct _NtProcess {
  NtTypeInstance instance;

  bool (*is_current)(struct _NtProcess* self);
  uint64_t (*get_id)(struct _NtProcess* self);
  void* (*send_signal)(struct _NtProcess* self, NtException exception, NtInterrupt interrupt);
  
  /*< private >*/
  struct _NtProcessPrivate* priv;
} NtProcess;
/**
 * nt_process_is_current:
 * @self: Instance of %NtProcess
 *
 * Returns whether or not the process is the currently running on the platform
 * 
 * Returns: %TRUE if @self is the current process, %FALSE if it is not the current process.
 */
bool nt_process_is_current(NtProcess* self);
/**
 * nt_process_get_platform:
 * @self: Instance of %NtProcess
 *
 * Used for retrieving the platform the process is running on.
 *
 * Returns: The platform the process is a part of
 */
NtPlatform* nt_process_get_platform(NtProcess* self);
/**
 * nt_process_get_id:
 * @self: Instance of %NtProcess
 *
 * Retrieves the process ID
 *
 * Returns: Any number above 0 if the API was able to get a PID.
 */
uint64_t nt_process_get_id(NtProcess* self);
/**
 * nt_process_attach_signal:
 * @self: Instance of %NtProcess
 * @hanlder: The handler method to execute
 * @data: Data to pass to the handler
 *
 * Attaches a signal handler with user data to the process.
 * %nt_process_is_current must return %TRUE in order for signaling to work.
 *
 * Returns: The ID of the signal
 */
int nt_process_attach_signal(NtProcess* self, NtProcessSignalHandler handler, void* data);
/**
 * nt_process_detach_signal:
 * @self: Instance of %NtProcess
 * @id: The ID of the signal
 *
 * Detaches a signal handler with user data to the process.
 * %nt_process_is_current must return %TRUE in order for signaling to work.
 *
 * Returns: The data passed by %nt_process_attach_signal
 */
void* nt_process_detach_signal(NtProcess* self, int id);
/**
 * nt_process_send_signal:
 * @self: Instance of %NtProcess
 * @exception: Exception to send
 * @interrupt: Interrupt to send
 *
 * Both @interrupt and @exception cannot be set beyond their none value at the same time.
 * Both arguments must also not be none so only one can be none. This method triggers a signal
 * on the target process.
 *
 * Returns: %NULL or the data returned.
 */
void* nt_process_send_signal(NtProcess* self, NtException exception, NtInterrupt interrupt);