platform/include/neutron/platform/platform.h

struct _NtPlatform;
/**
 * SECTION: platform
 * @title: Platform
 * @short_description: Generic platform API
 */

/**
 * NtPlatformOS:
 * @NT_PLATFORM_OS_UNKNOWN: OS could not be determined
 * @NT_PLATFORM_OS_LINUX: Linux
 * @NT_PLATFORM_OS_DARWIN: Apple's Darwin based operating systems
 * @NT_PLATFORM_OS_ANDROID: Android
 * @NT_PLATFORM_OS_WINDOWS: Microsoft Windows
 *
 * Enum of different operating systems
 */
typedef enum _NtPlatformOS {
  NT_PLATFORM_OS_UNKNOWN = 0,
  NT_PLATFORM_OS_LINUX,
  NT_PLATFORM_OS_DARWIN,
  NT_PLATFORM_OS_ANDROID,
  NT_PLATFORM_OS_WINDOWS
} NtPlatformOS;
/**
 * NtPlatformArch:
 * @NT_PLATFORM_ARCH_UNKNOWN: CPU architecture could not be determined
 * @NT_PLATFORM_ARCH_AARCH64: 64-bit ARM
 * @NT_PLATFORM_ARCH_ARM: 32-bit ARM
 * @NT_PLATFORM_ARCH_RISCV32: 32-bit RISC-V
 * @NT_PLATFORM_ARCH_RISCV64: 64-bit RISC-V
 * @NT_PLATFORM_ARCH_X86: 32-bit x86 (i386, i486, i686, etc.)
 * @NT_PLATFORM_ARCH_X86_64: 64-bit x86 (amd64)
 *
 * Enum of different CPU architectures
 */
typedef enum _NtPlatformArch {
  NT_PLATFORM_ARCH_UNKNOWN = 0,
  NT_PLATFORM_ARCH_AARCH64,
  NT_PLATFORM_ARCH_ARM,
  NT_PLATFORM_ARCH_RISCV32,
  NT_PLATFORM_ARCH_RISCV64,
  NT_PLATFORM_ARCH_X86,
  NT_PLATFORM_ARCH_X86_64
} NtPlatformArch;
/**
 * NtPlatform:
 * @instance: The %NtTypeInstance associated with this
 * @get_os: Method for retrieving the %NtPlatformOS
 * @get_arch: Method for retrieving the %NtPlatformArch
 * @get_device_enum: Method for retrieving the %NtDeviceEnum instance
 * @priv: Private data
 *
 * An %NtTypeInstance used for platform specific API methods
 */
typedef struct _NtPlatform {
  NtTypeInstance instance;

  NtPlatformOS (*get_os)(struct _NtPlatform* self);
  NtPlatformArch (*get_arch)(struct _NtPlatform* self);
  NtDeviceEnum* (*get_device_enum)(struct _NtPlatform* self);

  /*< private >*/
  struct _NtPlatformPrivate* priv;
} NtPlatform;