platform/lib/bindings.dart


  late final _nt_thread_detach_methodPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<NtThread>, ffi.Int)>>('nt_thread_detach_method');
  late final _nt_thread_detach_method = _nt_thread_detach_methodPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<NtThread>, int)>();

  /// nt_thread_set_main:
  /// @self: The thread
  /// @method: The method
  /// @data: The data to pass to the method
  ///
  /// Sets the thread's main method which executes after the attached methods.
  /// If the thread already has a main, then the old main is returned as a closure.
  ///
  /// Returns: The closure info on the old main and its data.
  NtThreadClosure nt_thread_set_main(
    ffi.Pointer<NtThread> self,
    NtThreadMethod method,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _nt_thread_set_main(
      self,
      method,
      data,
    );
  }

  late final _nt_thread_set_mainPtr = _lookup<
      ffi.NativeFunction<
          NtThreadClosure Function(ffi.Pointer<NtThread>, NtThreadMethod,
              ffi.Pointer<ffi.Void>)>>('nt_thread_set_main');
  late final _nt_thread_set_main = _nt_thread_set_mainPtr.asFunction<
      NtThreadClosure Function(
          ffi.Pointer<NtThread>, NtThreadMethod, ffi.Pointer<ffi.Void>)>();

  late final ffi.Pointer<ffi.Size> _NT_PROCESS_SIZE =
      _lookup<ffi.Size>('NT_PROCESS_SIZE');

  int get NT_PROCESS_SIZE => _NT_PROCESS_SIZE.value;

  set NT_PROCESS_SIZE(int value) => _NT_PROCESS_SIZE.value = value;

  ffi.Pointer<NtProcess> NT_PROCESS(
    ffi.Pointer<_imp1.NtTypeInstance> instance,
  ) {
    return _NT_PROCESS(
      instance,
    );
  }

  late final _NT_PROCESSPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtProcess> Function(
              ffi.Pointer<_imp1.NtTypeInstance>)>>('NT_PROCESS');
  late final _NT_PROCESS = _NT_PROCESSPtr.asFunction<
      ffi.Pointer<NtProcess> Function(ffi.Pointer<_imp1.NtTypeInstance>)>();

  bool NT_IS_PROCESS(
    ffi.Pointer<NtProcess> self,
  ) {
    return _NT_IS_PROCESS(
      self,
    );
  }

  late final _NT_IS_PROCESSPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtProcess>)>>(
          'NT_IS_PROCESS');
  late final _NT_IS_PROCESS =
      _NT_IS_PROCESSPtr.asFunction<bool Function(ffi.Pointer<NtProcess>)>();

  _imp1.NtType nt_process_get_type() {
    return _nt_process_get_type();
  }

  late final _nt_process_get_typePtr =
      _lookup<ffi.NativeFunction<_imp1.NtType Function()>>(
          'nt_process_get_type');
  late final _nt_process_get_type =
      _nt_process_get_typePtr.asFunction<_imp1.NtType Function()>();

  /// nt_process_is_current:
  /// @self: Instance of %NtProcess
  ///
  /// Returns whether or not the process is the currently running on the platform
  ///
  /// Returns: %TRUE if @self is the current process, %FALSE if it is not the current process.
  bool nt_process_is_current(
    ffi.Pointer<NtProcess> self,
  ) {
    return _nt_process_is_current(
      self,
    );
  }

  late final _nt_process_is_currentPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtProcess>)>>(
          'nt_process_is_current');
  late final _nt_process_is_current = _nt_process_is_currentPtr
      .asFunction<bool Function(ffi.Pointer<NtProcess>)>();

  /// nt_process_get_platform:
  /// @self: Instance of %NtProcess
  ///
  /// Used for retrieving the platform the process is running on.
  ///
  /// Returns: The platform the process is a part of
  ffi.Pointer<NtPlatform> nt_process_get_platform(
    ffi.Pointer<NtProcess> self,
  ) {
    return _nt_process_get_platform(
      self,
    );
  }

  late final _nt_process_get_platformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtPlatform> Function(
              ffi.Pointer<NtProcess>)>>('nt_process_get_platform');
  late final _nt_process_get_platform = _nt_process_get_platformPtr
      .asFunction<ffi.Pointer<NtPlatform> Function(ffi.Pointer<NtProcess>)>();

  /// nt_process_get_id:
  /// @self: Instance of %NtProcess
  ///
  /// Retrieves the process ID
  ///
  /// Returns: Any number above 0 if the API was able to get a PID.
  int nt_process_get_id(
    ffi.Pointer<NtProcess> self,
  ) {
    return _nt_process_get_id(
      self,
    );
  }

  late final _nt_process_get_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<NtProcess>)>>(
          'nt_process_get_id');
  late final _nt_process_get_id =
      _nt_process_get_idPtr.asFunction<int Function(ffi.Pointer<NtProcess>)>();

  /// nt_process_attach_signal:
  /// @self: Instance of %NtProcess
  /// @hanlder: The handler method to execute
  /// @data: Data to pass to the handler
  ///
  /// Attaches a signal handler with user data to the process.
  /// %nt_process_is_current must return %TRUE in order for signaling to work.
  ///
  /// Returns: The ID of the signal
  int nt_process_attach_signal(
    ffi.Pointer<NtProcess> self,
    NtProcessSignalHandler handler,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _nt_process_attach_signal(
      self,
      handler,
      data,
    );
  }

  late final _nt_process_attach_signalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<NtProcess>, NtProcessSignalHandler,
              ffi.Pointer<ffi.Void>)>>('nt_process_attach_signal');
  late final _nt_process_attach_signal =
      _nt_process_attach_signalPtr.asFunction<
          int Function(ffi.Pointer<NtProcess>, NtProcessSignalHandler,
              ffi.Pointer<ffi.Void>)>();

  /// nt_process_detach_signal:
  /// @self: Instance of %NtProcess
  /// @id: The ID of the signal
  ///
  /// Detaches a signal handler with user data to the process.
  /// %nt_process_is_current must return %TRUE in order for signaling to work.
  ///
  /// Returns: The data passed by %nt_process_attach_signal
  ffi.Pointer<ffi.Void> nt_process_detach_signal(
    ffi.Pointer<NtProcess> self,
    int id,
  ) {
    return _nt_process_detach_signal(
      self,
      id,
    );
  }

  late final _nt_process_detach_signalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<NtProcess>, ffi.Int)>>('nt_process_detach_signal');
  late final _nt_process_detach_signal =
      _nt_process_detach_signalPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<NtProcess>, int)>();

  /// nt_process_send_signal:
  /// @self: Instance of %NtProcess
  /// @exception: Exception to send
  /// @interrupt: Interrupt to send
  ///
  /// Both @interrupt and @exception cannot be set beyond their none value at the same time.
  /// Both arguments must also not be none so only one can be none. This method triggers a signal
  /// on the target process.
  ///
  /// Returns: %NULL or the data returned.
  ffi.Pointer<ffi.Void> nt_process_send_signal(
    ffi.Pointer<NtProcess> self,
    int exception,
    int interrupt,
  ) {
    return _nt_process_send_signal(
      self,
      exception,
      interrupt,
    );
  }

  late final _nt_process_send_signalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<NtProcess>, ffi.Int32,
              ffi.Int32)>>('nt_process_send_signal');
  late final _nt_process_send_signal = _nt_process_send_signalPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<NtProcess>, int, int)>();

  late final ffi.Pointer<ffi.Size> _NT_DEVICE_SIZE =
      _lookup<ffi.Size>('NT_DEVICE_SIZE');

  int get NT_DEVICE_SIZE => _NT_DEVICE_SIZE.value;

  set NT_DEVICE_SIZE(int value) => _NT_DEVICE_SIZE.value = value;

  ffi.Pointer<NtDevice> NT_DEVICE(
    ffi.Pointer<_imp1.NtTypeInstance> instance,
  ) {
    return _NT_DEVICE(
      instance,
    );
  }

  late final _NT_DEVICEPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtDevice> Function(
              ffi.Pointer<_imp1.NtTypeInstance>)>>('NT_DEVICE');
  late final _NT_DEVICE = _NT_DEVICEPtr.asFunction<
      ffi.Pointer<NtDevice> Function(ffi.Pointer<_imp1.NtTypeInstance>)>();

  bool NT_IS_DEVICE(
    ffi.Pointer<NtDevice> self,
  ) {
    return _NT_IS_DEVICE(
      self,
    );
  }

  late final _NT_IS_DEVICEPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtDevice>)>>(
          'NT_IS_DEVICE');
  late final _NT_IS_DEVICE =
      _NT_IS_DEVICEPtr.asFunction<bool Function(ffi.Pointer<NtDevice>)>();

  _imp1.NtType nt_device_get_type() {
    return _nt_device_get_type();
  }

  late final _nt_device_get_typePtr =
      _lookup<ffi.NativeFunction<_imp1.NtType Function()>>(
          'nt_device_get_type');
  late final _nt_device_get_type =
      _nt_device_get_typePtr.asFunction<_imp1.NtType Function()>();

  /// nt_device_get_query:
  /// @self: Instance of %NtDevice
  ///
  /// Gets the querying information for a device.
  ///
  /// Returns: A device query
  NtDeviceQuery nt_device_get_query(
    ffi.Pointer<NtDevice> self,
  ) {
    return _nt_device_get_query(
      self,
    );
  }

  late final _nt_device_get_queryPtr = _lookup<
          ffi.NativeFunction<NtDeviceQuery Function(ffi.Pointer<NtDevice>)>>(
      'nt_device_get_query');
  late final _nt_device_get_query = _nt_device_get_queryPtr
      .asFunction<NtDeviceQuery Function(ffi.Pointer<NtDevice>)>();
}

/// NtDeviceEnum:
/// @instance: An %NtTypeInstance associated with this
/// @added: Signal for when devices are added
/// @removed: Signal for when devices are removed
/// @count: Method for counting a query
/// @query: Method for performing a query
///
/// Enumerator for hardware devices
class _NtDeviceEnum extends ffi.Struct {
  external _imp1.NtTypeInstance instance;

  external ffi.Pointer<_imp1.NtSignal> added;

  external ffi.Pointer<_imp1.NtSignal> removed;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<_NtDeviceEnum>, NtDeviceQuery)>> count;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<_imp1.NtList> Function(
              ffi.Pointer<_NtDeviceEnum>, NtDeviceQuery)>> query;
}

/// NtDeviceQuery:
/// @kind: The kind of device
/// @bus: The bus for the device
/// @virt: Boolean value to look for virtual devices
/// @phys: Boolean value to look for physical devices
/// @parameters: Querying parameters
///
/// Querying information for a device
typedef NtDeviceQuery = _NtDeviceQuery;

/// NtDeviceQuery:
/// @kind: The kind of device
/// @bus: The bus for the device
/// @virt: Boolean value to look for virtual devices
/// @phys: Boolean value to look for physical devices
/// @parameters: Querying parameters
///
/// Querying information for a device
class _NtDeviceQuery extends ffi.Struct {
  @ffi.Int32()
  external int kind;

  @ffi.Int32()
  external int bus;

  @ffi.Bool()
  external bool virt;

  @ffi.Bool()
  external bool phys;

  external ffi.Pointer<_imp1.NtTypeArgument> parameters;
}

/// NtDeviceKind:
/// @NT_DEVICE_MISC: Miscellaneous devices
/// @NT_DEVICE_HID: Human interface devices
/// @NT_DEVICE_DISPLAY: Display devices
/// @NT_DEVICE_AUDIO: Audio devices
/// @NT_DEVICE_NET: Networking devices
/// @NT_DEVICE_STORAGE: Storage devices
/// @NT_DEVICE_PLATFORM: Platform devices
///
/// Enum of different kinds of devices.
abstract class _NtDeviceKind {
  static const int NT_DEVICE_MISC = 0;
  static const int NT_DEVICE_HID = 1;
  static const int NT_DEVICE_DISPLAY = 2;
  static const int NT_DEVICE_AUDIO = 3;
  static const int NT_DEVICE_NET = 4;
  static const int NT_DEVICE_STORAGE = 5;
  static const int NT_DEVICE_PLATFORM = 6;
}
